# embedded-modbus-rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: lib.rs
src/data/: mod.rs
src/embbeded_server/: mod.rs
src/modbus_map/: mod.rs
src/server/: mod.rs
