[package]
name = "uamp-modbus-rtu-embbeded-rs"
authors = ["Marco Rodriguez Bosco marco.bosco@uamp.io"]
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.2", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] } 
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version ="0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
#embassy-usb  = { version ="0.2.0", features = ["defmt"] }
#embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6"] }
embassy-futures = { version = "0.1.1" }
#embassy-usb-logger = { version = "0.2.0" }
#cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
#cyw43-pio = { version = "0.2.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#embedded-graphics = "0.8.1"
#mipidsi = "0.8.0"
#display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
#smart-leds = "0.4.0"
heapless = "0.8"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.8.1"

bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }


